<resources>
    <string name="app_name">Physiometrics</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titleImageMissing">Title Image</string>
    <string name="imageMissing">Image Missing!</string>
    <string name="textViewTotalTime">Total  Time :</string>
    <string name="textViewWindowTime">Window Time:</string>
    <string name="editTextTotalTime">10800</string>
    <string name="editTextWindowTime">2</string>
    <string name="buttonStart">Start</string>
    <string name="buttonData">Data</string>
    <string name="buttonOK">OK</string>
    <string name="editTextNumberOfCentroids">120</string>
    <string name="experimentNotice1">Switch to choose User Authentication</string>
    <string name="buttonClaTestStart">Start</string>
    <string name="textClaTestResult">Result</string>
    <string name="buttonAuthStart">Start</string>
    <string name="buttonAuthStop">Stop</string>
    <string name="summit">Summit</string>
    <string name="button_done">Done</string>
    <string name="button_next">Next</string>
</resources>
